# BingoDiary

./: .gitignore  README.md  index.html  jsconfig.json  package-lock.json  package.json  qh_order.txt  quasar.config.js  tailwind.config.js  vite.config.js  日志.md
.claude/: settings.local.json
src/: App.vue  main.js
src-electron/: electron-main.js  electron-preload.js
src-electron/icons/: icon.icns
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  diary.rs  katex.min.css  lib.rs  menu.rs  pdf.rs  tags.rs
src-tauri/src/sync/: auth.rs  drive.rs  engine.rs  metadata.rs  mod.rs
src/boot/: global.js
src/components/: EntryTagSelector.vue  EventModal.vue  LockScreen.vue  MarkdownEditor.vue  MobileBottomNav.vue  MobileTopBar.vue  SettingsModal.vue  SyncSettings.vue  SyncStatus.vue  TagBar.vue  TagManager.vue  TagStats.vue
src/css/: _event-modal.scss  _layout.scss  _mobile.scss  _titlebar.scss  _variables.scss  app.scss  index.scss
src/i18n/: index.js
src/pages/: Index.vue
src/router/: routes.js
utils/: project_flattener.py
