[package]
name = "bingo-diary"
version = "0.0.3"
description = "bingoyes' diary"
authors = ["邱涵 <qiuhanCS@foxmail.com>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
tauri = { version = "2.9.5", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
chrono = "0.4"
walkdir = "2"
pulldown-cmark = "0.9"
katex = { version = "0.4", default-features = false, features = ["duktape"] }
base64 = "0.21"
tempfile = "3"
regex = "1"
bcrypt = "0.15"

# Google Drive Sync
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "multipart"] }
oauth2 = { version = "4.4", default-features = false, features = ["reqwest", "rustls-tls"] }
tokio = { version = "1", features = ["full", "time", "sync"] }
sha2 = "0.10"
hex = "0.4"
url = "2.5"
rand = "0.8"
mime_guess = "2"
async-trait = "0.1"
urlencoding = "2"

# Desktop-only dependencies (PDF export uses headless Chrome)
[target.'cfg(not(target_os = "android"))'.dependencies]
headless_chrome = "1.0"
